# cyberSecQwen_4b_4bit

./: .gitignore  Makefile  eval_cti_v0.py  modal_cti_eval.py  modal_diag_rcm.py  modal_eval_gptq.py  modal_eval_llamacpp.py  modal_eval_vllm.py  modal_quantize_awq.py  modal_quantize_awq_v2.py  modal_quantize_gguf.py  modal_quantize_gptq.py  pyproject.toml  quantize_model.py  update_hf_card.py  update_hf_card_gguf.py
results/: eval_results_gguf.json
