[project]
name = "cybersecqwen-eval"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "modal>=1.4.2",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
